# mcp-meeting-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: gemini_examples.py
src/mcp_meeting_assistant/: chat_session.py  main.py  mcp_client.py  mcp_server.py
src/mcp_meeting_assistant/models/: gemini.py  model.py
